1、添加多租户模式，数据库、集合、分区三类隔离 2、优化bean注册，false时只注册ImageIndexService，因为其他模块有在使用 3、优化milvus连接，使用连接池 4、优化代码接口，分层解耦